# template-project

./: .gitignore  CLAUDE.md  Dockerfile  api.py  config.py  pyproject.toml  settings.json
endpoints/: health.py
template_project/: di_container.py
template_project/core/: config.py  schema.py  secret_provider.py
template_project/core/configs/: __init__.py  app_config.py  llm_config.py
template_project/infrastructure/: api_client.py  client.py  llm_client.py
tests/: conftest.py  test_client.py  test_config.py
